;;;; -*- coding: utf-8; -*-
changes in sbcl-1.0.13 relative to sbcl-1.0.12:
  * SB-EXT:NATIVE-NAMESTRING takes a new keyword AS-FILE, forcing
    unparsing of directory pathnames as files. Analogously,
    SB-EXT:PARSE-NATIVE-NAMESTRING takes an AS-DIRECTORY, forcing a
    filename to parse into a directory pathname.
  * enhancement: RUN-PROGRAM allows unicode arguments and environments
    to be used (using the default stream external format), and allows
    non-simple strings to be used. (thanks to Harald Hanche-Olsen)
  * optimization: COPY-SEQ, FILL, and SUBSEQ are 30-80% faster for
    strings and vectors whose element-type or simplicity is not fully
    known at compile-time.
  * optimization: STRING-TRIM and related functions no longer allocate
    a new string when no trimming needs to be performed. These functions
    are also faster than before when the input string has been declared
    as a simple-string.
  * optimization: READ-SEQUENCE on simple-strings is up to 80% faster.
  * optimization: READ-LINE is significantly faster for files containing
    long lines.
  * optimization: non-open coded uses of character comparison operators
    (e.g. char=) no longer cons when called with more than one parameter
    on platforms supporting dynamic-extent allocation.
  * bug fix: READ-SEQUENCE on composite stream wrapping a Gray stream
    with STREAM-ELEMENT-TYPE (UNSIGNED-BYTE 8) signalled an error.
  * bug fix: COPY-SEQ on lists did not signal a type-error on improper
    lists in safe code.
  * bug fix: some sequence functions elided bounds checking when
    SPEED > SAFETY.
  * bug fix: too liberal weakening of union-type checks when SPEED >
    SAFETY.
  * bug fix: more bogus fixnum declarations in ROOM implementation
    have been fixed.

changes in sbcl-1.0.12 relative to sbcl-1.0.11:
  * new feature: MAKE-HASH-TABLE now experimentally accepts a
    :SYNCHRONIZED argument, which makes the hash-table safe for